--- a/Udemy Curso/src/components/layout/Card.css
+++ b/Udemy Curso/src/components/layout/Card.css
@@ -1,13 +1,14 @@
 .Card{
-    background-color:red;
+    
     border-radius:10px;
     overflow:hidden;
-    border: 3px solid red;
+    border: 3px solid ;
     margin:10px;
 
     display:flex;
     flex-direction:column;
-    min-width: 300px;
+    min-width: 500px;
+    max-width: 500px;
 }
 
 .Card .Title{
